# F.E.I.S.

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Chart.cpp  Chart.h  ChartWithHistory.cpp  ChartWithHistory.h  EditActions.cpp  EditActions.h  EditorState.cpp  EditorState.h  EditorStateActions.cpp  Fumen.cpp  Fumen.h  History.h  HistoryActions.cpp  HistoryActions.h  LNMarker.cpp  LNMarker.h  Marker.cpp  Marker.h  Note.cpp  Note.h  NotesClipboard.cpp  Notification.cpp  Notification.h  NotificationsQueue.cpp  NotificationsQueue.h  Preferences.cpp  Preferences.h  README.md  SoundEffect.cpp  SoundEffect.h  Toolbox.cpp  Toolbox.h  Widgets.cpp  Widgets.h  main.cpp  meson.build  (+3 more)
Widgets/: BlankScreen.cpp  BlankScreen.h  DensityGraph.cpp  DensityGraph.h  LinearView.cpp  LinearView.h  Playfield.cpp  Playfield.h
assets/shaders/: chord_tint.frag
assets/textures/markers/triangles/: marker.json
debian_packaging/: build_deb.sh  f.e.i.s-control  f.e.i.s.desktop  postinst  postrm
docs/: Compiling.md  How to compile.md  Marker Format.md  Releases.md  Setup.md
include/: atomicops.h  eigen_polyfit.hpp  interval_tree.hpp  json.hpp  meson.build  readerwritercircularbuffer.h  readerwriterqueue.h
include/fmt/: meson.build
include/hsluv/: meson.build
include/imgui/: imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui_demo.cpp  meson.build
include/imgui_extras/: imgui_config_feis.cpp  imgui_config_feis.hpp  meson.build
packaging/appimage/: .gitignore  build.sh
packaging/common/: f.e.i.s.appdata.xml  f.e.i.s.desktop
packaging/debian/: build_deb.sh  f.e.i.s-control  f.e.i.s.desktop  postinst  postrm
src/: CMakeLists.txt  Chart.cpp  Chart.h  ChartWithHistory.cpp  EditorState.cpp  EditorState.h  EditorStateActions.h  FindTempo_standalone.cpp  FindTempo_standalone.hpp  Fumen.cpp  Fumen.h  History.h  LNMarker.cpp  LNMarker.h  Main.cpp  Marker.cpp  Marker.h  Note.cpp  NotesClipboard.h  Notification.h  TimeSelection.h  Toolbox.cpp  Toolbox.h  aubio_cpp.cpp  aubio_cpp.hpp  better_beats.cpp  better_beats.hpp  better_chart.cpp  better_chart.hpp  better_hakus.cpp  better_hakus.hpp  better_metadata.cpp  better_metadata.hpp  better_note.cpp  better_note.hpp  better_notes.cpp  better_notes.hpp  better_song.cpp  better_song.hpp  better_timing.cpp  (+112 more)
src/Widgets/: BlankScreen.h  LinearView.cpp  LinearView.h  Playfield.h  meson.build
src/custom_sfml_audio/: al_check.cpp  al_check.hpp  al_resource.cpp  al_resource.hpp  audio_device.cpp  audio_device.hpp  beat_ticks.cpp  beat_ticks.hpp  chord_claps.cpp  chord_claps.hpp  clap_player.cpp  clap_player.hpp  fake_pitched_sound_stream.cpp  fake_pitched_sound_stream.hpp  meson.build  note_claps.cpp  note_claps.hpp  open_music.cpp  open_music.hpp  open_sound_stream.cpp  open_sound_stream.hpp  precise_sound_stream.cpp  precise_sound_stream.hpp  sampler_callback.cpp  sampler_callback.hpp  synced_sound_streams.cpp  synced_sound_streams.hpp
src/imgui/: custom.cpp  custom.hpp  meson.build
src/tests/: meson.build
src/tests/doctest/: decimals.cpp  fractions.cpp  long_note_dummy.cpp  meson.build  notes.cpp
src/tests/rapidcheck/: generators.cpp  generators.hpp  main.cpp  meson.build  rapidcheck_main.cpp
src/widgets/: blank_screen.cpp  blank_screen.hpp  density_graph.cpp  density_graph.hpp  lane_order.cpp  lane_order.hpp  linear_view.cpp  linear_view.hpp  linear_view_waveform_mode.cpp  linear_view_waveform_mode.hpp  meson.build  playfield.cpp  playfield.hpp  waveform_view.cpp  waveform_view.hpp
subprojects/: .gitignore  mpdecimal.wrap  nowide.wrap  platform_folders.wrap  rapidcheck.wrap  soloud.wrap
subprojects/packagefiles/nowide/: meson.build
subprojects/packagefiles/nowide/src/: meson.build
subprojects/packagefiles/platform_folders/: meson.build
subprojects/packagefiles/rapidcheck/: meson.build  meson_options.txt
subprojects/packagefiles/rapidcheck/src/: meson.build
subprojects/packagefiles/rapidcheck/src/detail/: meson.build
subprojects/packagefiles/soloud/: meson.build  meson_options.txt
subprojects/packagefiles/soloud/src/: meson.build
subprojects/packagefiles/soloud/src/audiosource/: meson.build
subprojects/packagefiles/soloud/src/backend/: meson.build
subprojects/packagefiles/soloud/src/core/: meson.build
subprojects/packagefiles/soloud/src/filter/: meson.build
tests/: hsluv_rainbow_maker.cpp  imgui_demo.cpp  imgui_input_decimal.cpp  json_decimal.cpp  meson.build  more_precise_music.cpp  more_precise_music.hpp  mouse_events.cpp  nowide+whereami.cpp  nowide.cpp  scrollwheel.cpp  soloud_test.cpp  test_polyfit.cpp  track.hpp
utils/: bump_version.py  copy_dependencies.py  format_code.sh  make_windows_release.py  render_windows_icon.py  render_windows_icon.sh  requirements.txt  save_meson_wrap.py  visualize_sample_bug.py
