sources += files(
    'better_beats.cpp',
    'better_chart.cpp',
    'better_hakus.cpp',
    'better_metadata.cpp',
    'better_note.cpp',
    'better_notes.cpp',
    'better_song.cpp',
    'better_timing.cpp',
    'chart.cpp',
    'chart_state.cpp',
    'editor_state.cpp',
    'file_dialogs.cpp',
    'fumen.cpp',
    'history_item.cpp',
    'imgui_extras.cpp',
    'json_decimal_parser.cpp',
    'ln_marker.cpp',
    'main.cpp',
    'marker.cpp',
    'note.cpp',
    'notes_clipboard.cpp',
    'notification.cpp',
    'notifications_queue.cpp',
    'playfield.cpp',
    'precise_music.cpp',
    'preferences.cpp',
    'sound_effect.cpp',
    'special_numeric_types.cpp',
    'toolbox.cpp',
)

subdir('widgets')