sources += files([
    'al_check.cpp',
    'al_resource.cpp',
    'audio_device.cpp',
    'beat_ticks.cpp',
    'fake_pitched_sound_stream.cpp',
    'note_claps.cpp',
    'open_music.cpp',
    'open_sound_stream.cpp',
    'precise_sound_stream.cpp',
    'sampler_callback.cpp',
    'synced_sound_streams.cpp'
])