option('alsa', type : 'feature', value : 'disabled')
option('coreaudio', type : 'feature', value : 'disabled')
option('jack', type : 'feature', value : 'disabled')
option('miniaudio', type : 'feature', value : 'disabled')
option('openal', type : 'feature', value : 'disabled')
option('oss', type : 'feature', value : 'disabled')
option('portaudio', type : 'feature', value : 'disabled')
option('sdl', type : 'feature', value : 'disabled')
option('sdl2', type : 'feature', value : 'disabled')
option('sdl_static', type : 'feature', value : 'disabled')
option('sdl2_static', type : 'feature', value : 'disabled')
option('vita_homebrew', type : 'feature', value : 'disabled')
option('wasapi', type : 'feature', value : 'disabled')
option('winmm', type : 'feature', value : 'disabled')
option('xaudio2', type : 'feature', value : 'disabled')

option('nosound', type : 'feature', value : 'disabled')
option('null', type : 'feature', value : 'enabled')