sources += files(
    'Any.cpp',
    'Assertions.cpp',
    'Base64.cpp',
    'Configuration.cpp',
    'DefaultTestListener.cpp',
    'FrequencyMap.cpp',
    'ImplicitParam.cpp',
    'LogTestListener.cpp',
    'MapParser.cpp',
    'MulticastTestListener.cpp',
    'ParseException.cpp',
    'Platform.cpp',
    'Property.cpp',
    'PropertyContext.cpp',
    'ReproduceListener.cpp',
    'Results.cpp',
    'Serialization.cpp',
    'StringSerialization.cpp',
    'TestMetadata.cpp',
    'TestParams.cpp',
    'Testing.cpp',
)