sources += files(
    'sfxr/soloud_sfxr.cpp',
    'wav/soloud_wav.cpp',
    'wav/dr_impl.cpp',
    'wav/soloud_wavstream.cpp',
    'wav/stb_vorbis.c',
    'tedsid/ted.cpp',
    'tedsid/sid.cpp',
    'tedsid/soloud_tedsid.cpp',
    'monotone/soloud_monotone.cpp',
    'noise/soloud_noise.cpp',
    'vic/soloud_vic.cpp',
    'vizsn/soloud_vizsn.cpp',
    'openmpt/soloud_openmpt.cpp',
    'openmpt/soloud_openmpt_dll.c',
    'speech/darray.cpp',
    'speech/klatt.cpp',
    'speech/tts.cpp',
    'speech/resonator.cpp',
    'speech/soloud_speech.cpp',
)