sources += files(
    'soloud_file.cpp',
    'soloud_core_voiceops.cpp',
    'soloud_thread.cpp',
    'soloud_fader.cpp',
    'soloud_filter.cpp',
    'soloud_core_basicops.cpp',
    'soloud_core_getters.cpp',
    'soloud_core_faderops.cpp',
    'soloud_bus.cpp',
    'soloud_fft.cpp',
    'soloud.cpp',
    'soloud_core_setters.cpp',
    'soloud_audiosource.cpp',
    'soloud_fft_lut.cpp',
    'soloud_core_3d.cpp',
    'soloud_queue.cpp',
    'soloud_core_voicegroup.cpp',
    'soloud_core_filterops.cpp',
    'soloud_misc.cpp',
)