sources += files(
    'soloud_echofilter.cpp',
    'soloud_waveshaperfilter.cpp',
    'soloud_freeverbfilter.cpp',
    'soloud_fftfilter.cpp',
    'soloud_robotizefilter.cpp',
    'soloud_dcremovalfilter.cpp',
    'soloud_bassboostfilter.cpp',
    'soloud_flangerfilter.cpp',
    'soloud_biquadresonantfilter.cpp',
    'soloud_lofifilter.cpp',
)